Name:                   HUnit-Plus
Version:                2.0.0.0
Synopsis:               A test framework building on HUnit.
Description:
  HUnit-Plus is a testing framework for Haskell that builds on the
  HUnit test framework.
License:                BSD3
Author:                 Eric McCorkle, Dean Herington
Maintainer:             eric@metricspace.net
Stability:              Beta
Category:               Testing
Build-type:             Simple
Cabal-version:          >= 1.9.2

Executable RunTests
  Main-Is:              RunTests.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0, Cabal >= 1.16.0, deepseq, hexpat, timeit,
                        cmdargs, hashable, containers, time, old-locale, hostname,
                        parsec, bytestring, directory
  ghc-options:          -fhpc

Test-Suite unit-tests
  type:                 detailed-0.9
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0, Cabal >= 1.16.0, deepseq, hexpat, timeit,
                        cmdargs, hashable, containers, time, old-locale, hostname,
                        parsec, bytestring
  test-module:          Tests
  other-modules:        Test.HUnit.Base
                        Test.HUnit.Execution
                        Test.HUnit.Filter
                        Test.HUnit.Main
                        Test.HUnit.Legacy
                        Test.HUnit.Reporting
                        Test.HUnit.Terminal
                        Test.HUnit.Text
                        Test.HUnit.XML
                        Test.HUnit
                        Tests.Test
                        Tests.Test.HUnit
                        Tests.Test.HUnit.Base
                        Tests.Test.HUnit.Execution
                        Tests.Test.HUnit.Filter
                        Tests.Test.HUnit.Main
                        Tests.Test.HUnit.ReporterUtils
                        Tests.Test.HUnit.Reporting
                        Tests.Test.HUnit.Text
                        Tests.Test.HUnit.XML
Library
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0, Cabal >= 1.16.0, deepseq, hexpat, timeit,
                        cmdargs, hashable, containers, time, old-locale, hostname,
                        parsec, bytestring
  exposed-modules:      Test.HUnit.Base
                        Test.HUnit.Execution
                        Test.HUnit.Filter
                        Test.HUnit.Main
                        Test.HUnit.Legacy
                        Test.HUnit.Reporting
                        Test.HUnit.Terminal
                        Test.HUnit.Text
                        Test.HUnit.XML
                        Test.HUnit
