Name:                   HUnit-Plus
Version:                0.2.0.0
Synopsis:               A test framework building on HUnit.
Description:
  HUnit-Plus is a testing framework for Haskell that builds on the
  HUnit test framework.
License:                BSD3
Author:                 Eric McCorkle
Maintainer:             eric@metricspace.net
Stability:              Beta
Category:               Testing
Build-type:             Simple
Cabal-version:          >= 1.9.2

Test-Suite RunTests
  type:                 exitcode-stdio-1.0
  Main-Is:              RunTests.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.4.0, Cabal >= 1.16.0, deepseq, hexpat, timeit,
                        cmdargs, hashable, containers, time, old-locale, hostname,
                        parsec, bytestring, directory
  ghc-options:          -fhpc

Library
  hs-source-dirs:       src
  build-depends:        base >= 4.4.0, Cabal >= 1.16.0, deepseq, hexpat, timeit,
                        cmdargs, hashable, containers, time, old-locale, hostname,
                        parsec, bytestring
  exposed-modules:      Test.HUnitPlus.Base
                        Test.HUnitPlus.Execution
                        Test.HUnitPlus.Filter
                        Test.HUnitPlus.Main
                        Test.HUnitPlus.Legacy
                        Test.HUnitPlus.Reporting
                        Test.HUnitPlus.Terminal
                        Test.HUnitPlus.Text
                        Test.HUnitPlus.XML
                        Test.HUnitPlus
